@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2005-2024 Axelor (<http://axelor.com>).
+ * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -37,15 +37,21 @@ public class ICalendarEventController {
 
   @SuppressWarnings("unchecked")
   public void addEmailGuest(ActionRequest request, ActionResponse response)
-      throws ClassNotFoundException, InstantiationException, IllegalAccessException,
-          AxelorException, MessagingException, IOException, ICalendarException, ParseException {
+      throws ClassNotFoundException,
+          InstantiationException,
+          IllegalAccessException,
+          AxelorException,
+          MessagingException,
+          IOException,
+          ICalendarException,
+          ParseException {
     ICalendarEvent event = request.getContext().asType(ICalendarEvent.class);
     try {
       Map<String, Object> guestEmail = (Map<String, Object>) request.getContext().get("guestEmail");
       if (guestEmail != null) {
         EmailAddress emailAddress =
             Beans.get(EmailAddressRepository.class)
-                .find(new Long((guestEmail.get("id").toString())));
+                .find(Long.valueOf((guestEmail.get("id").toString())));
         if (emailAddress != null) {
           response.setValue(
               "attendees",
